Added Grid view to homepage

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,6 +43,7 @@ dependencies {
     implementation libs.retrofit2.retrofit
     implementation libs.converter.gson
     implementation libs.androidx.gridlayout
+    implementation libs.picasso.v28
 
     testImplementation libs.junit
     androidTestImplementation libs.androidx.junit
