--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,7 +15,10 @@
         android:theme="@style/Theme.Test"
         tools:targetApi="31">
         <activity
-            android:name="unitn.app.SearchForMedia"
+            android:name="unitn.app.DettaglioFilm"
+            android:exported="false" />
+        <activity
+            android:name="unitn.app.Search"
             android:exported="false" />
         <activity
             android:name="unitn.app.MainActivity"
