--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,13 +15,16 @@
         android:theme="@style/Theme.Test"
         tools:targetApi="31">
         <activity
+            android:name="unitn.app.InfoFilm"
+            android:exported="false" />
+        <activity
             android:name="unitn.app.DettaglioFilm"
             android:exported="false" />
         <activity
             android:name="unitn.app.Search"
             android:exported="false" />
         <activity
-            android:name="unitn.app.MainActivity"
+            android:name="unitn.app.HomePage"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
