--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,13 +15,13 @@
         android:theme="@style/Theme.Test"
         tools:targetApi="31">
         <activity
-            android:name="unitn.app.InfoFilm"
+            android:name="unitn.app.AggiungiFilm"
             android:exported="false" />
         <activity
             android:name="unitn.app.DettaglioFilm"
             android:exported="false" />
         <activity
-            android:name="unitn.app.Search"
+            android:name="unitn.app.Ricerca"
             android:exported="false" />
         <activity
             android:name="unitn.app.HomePage"
