--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,10 +15,10 @@
         android:theme="@style/Theme.Test"
         tools:targetApi="31">
         <activity
-            android:name="unitn.app.AggiungiFilm"
+            android:name="unitn.app.AggiungiMedia"
             android:exported="false" />
         <activity
-            android:name="unitn.app.DettaglioFilm"
+            android:name="unitn.app.DettaglioMedia"
             android:exported="false" />
         <activity
             android:name="unitn.app.Ricerca"
