--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,6 +15,9 @@
         android:theme="@style/Theme.Test"
         tools:targetApi="31">
         <activity
+            android:name="unitn.app.PosterGigantografia"
+            android:exported="false" />
+        <activity
             android:name="unitn.app.AggiungiMedia"
             android:exported="false" />
         <activity
