--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,7 +15,7 @@
         android:theme="@style/Theme.Test"
         tools:targetApi="31">
         <activity
-            android:name="unitn.app.Auth"
+            android:name="unitn.app.Login"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -23,6 +23,9 @@
             </intent-filter>
         </activity>
 
+        <activity
+            android:name="unitn.app.SignIn"
+            android:exported="false" />
         <activity
             android:name="unitn.app.AggiungiMedia"
             android:exported="false" />
