--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,14 +15,17 @@
         android:theme="@style/Theme.Test"
         tools:targetApi="31">
         <activity
+            android:name="unitn.app.Profile"
+            android:exported="false" />
+        <activity
             android:name="unitn.app.Login"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
         <activity
             android:name="unitn.app.SignIn"
             android:exported="false" />
