--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,7 @@
         android:label="Non Ci Resta Che Guardare"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.Test"
+        android:theme="@style/Base.Theme.Test"
         tools:targetApi="31">
         <activity
             android:name="unitn.app.CronologiaMedia"
