Added username limits

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -34,7 +34,7 @@
             </intent-filter>
         </activity>
         <activity
-            android:name="unitn.app.SignIn"
+            android:name="unitn.app.SignUp"
             android:screenOrientation="portrait"
             android:exported="false" />
         <activity
