--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,22 +11,25 @@
         android:icon="@mipmap/logo"
         android:label="Non Ci Resta Che Guardare"
         android:roundIcon="@mipmap/logo_round"
+        android:screenOrientation="portrait"
         android:supportsRtl="true"
         android:theme="@style/Base.Theme.Test"
-        android:screenOrientation="portrait"
         tools:targetApi="31">
         <activity
-            android:name="unitn.app.CronologiaMedia"
-            android:screenOrientation="portrait"
+            android:name="unitn.app.LoadingScreen"
             android:exported="false" />
+        <activity
+            android:name="unitn.app.CronologiaMedia"
+            android:exported="false"
+            android:screenOrientation="portrait" />
         <activity
             android:name="unitn.app.Profilo"
-            android:screenOrientation="portrait"
-            android:exported="false" />
+            android:exported="false"
+            android:screenOrientation="portrait" />
         <activity
             android:name="unitn.app.Login"
-            android:screenOrientation="portrait"
-            android:exported="true">
+            android:exported="true"
+            android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -35,24 +38,24 @@
         </activity>
         <activity
             android:name="unitn.app.SignUp"
-            android:screenOrientation="portrait"
-            android:exported="false" />
+            android:exported="false"
+            android:screenOrientation="portrait" />
         <activity
             android:name="unitn.app.AggiungiMedia"
-            android:screenOrientation="portrait"
-            android:exported="false" />
+            android:exported="false"
+            android:screenOrientation="portrait" />
         <activity
             android:name="unitn.app.DettaglioMedia"
-            android:screenOrientation="portrait"
-            android:exported="false" />
+            android:exported="false"
+            android:screenOrientation="portrait" />
         <activity
             android:name="unitn.app.Ricerca"
-            android:screenOrientation="portrait"
-            android:exported="false" />
+            android:exported="false"
+            android:screenOrientation="portrait" />
         <activity
             android:name="unitn.app.HomePage"
-            android:screenOrientation="portrait"
-            android:exported="false" />
+            android:exported="false"
+            android:screenOrientation="portrait" />
     </application>
 
 </manifest>
