--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,6 +16,9 @@
         android:theme="@style/Base.Theme.Test"
         tools:targetApi="31">
         <activity
+            android:name="unitn.app.AggiungiCustomMedia"
+            android:exported="false" />
+        <activity
             android:name="unitn.app.LoadingScreen"
             android:exported="false" />
         <activity
