--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,6 +16,18 @@
         android:theme="@style/Base.Theme.Test"
         tools:targetApi="31">
         <activity
+            android:name="unitn.app.activities.profilo.ProfiloStatistiche"
+            android:exported="false" />
+        <activity
+            android:name="unitn.app.activities.profilo.ProfiloCronologia"
+            android:exported="false" />
+        <activity
+            android:name="unitn.app.activities.profilo.ProfiloAccount"
+            android:exported="false" />
+        <activity
+            android:name="unitn.app.activities.profilo.ProfiloSelezioneTema"
+            android:exported="false" />
+        <activity
             android:name="unitn.app.activities.customMedia.AggiungiCustomMedia"
             android:exported="false" />
         <activity
